Fixed Header and added user and admin folders

--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -1,3 +1,7 @@
-<p>
-  login works!
-</p>
+    <app-header-navbar [classNames] ="'navbar navbar-inverse sticky-navigation'"> </app-header-navbar>
+    <div style="margin-top:3%">
+      <p>
+        login works!
+      </p>
+      <a [routerLink]="['/register']" >New User ? </a>
+    </div>
