--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="app">
-  <router-outlet></router-outlet>
+    <div class="content-wrap">
+        <app-header></app-header>
+        <router-outlet></router-outlet>
+    </div>
 </div>
