--- a/src/app/user-auth/header-navbar/header-navbar.component.html
+++ b/src/app/user-auth/header-navbar/header-navbar.component.html
@@ -1,7 +1,7 @@
-<div class="navbar navbar-inverse sticky-navigation navbar-fixed-top" role="navigation" data-spy="affix" data-offset-top="200">
+<div [ngClass]="classNames" role="navigation" data-spy="affix" data-offset-top="200">
   <div class="container">
     <div class="navbar-header">
-      <a class="logo-left " href="#/"><i class="mdi-image-timelapse"></i>Pluto</a>
+      <a class="logo-left " [routerLink]="['/']"><i class="mdi-image-timelapse"></i>Pluto</a>
     </div>
     <div class="navbar-right">
       <button class="menu-icon" (click)="toggleMenu()"  id="open-button">
