--- a/src/app/user-auth/header/header.component.html
+++ b/src/app/user-auth/header/header.component.html
@@ -1,10 +1,9 @@
-<header class="hero-area" id="home">
-      
+<header [ngClass]="headerClass" id="home">
   <div class="container">
-      <div class="col-md-12">
+      <div class="col-md-12" >
        <app-header-navbar> </app-header-navbar>
       </div>        
-    <div class="contents text-right">
+    <div class="contents text-right" *ngIf="showHeader">
       <h1 class="wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">Box solution for conducting ICOs <b>for 40 BTC</b></h1>
       <h1 class="wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">2 weeks for preparation + 1 month for PR campaign</h1>
       <p class="wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">
