--- a/src/app/user-auth/register-user/register-user.component.html
+++ b/src/app/user-auth/register-user/register-user.component.html
@@ -1,6 +1,17 @@
 <app-header-navbar [classNames] ="'navbar navbar-inverse sticky-navigation'"> </app-header-navbar>
-<div style="margin-top:3%">
-  <p>
-    register works!
-  </p>
+<div style="margin-top:5%">
+    <form>
+      <h3>Register New User</h3>
+      <input placeholder="Email" type="email" required>
+      <input placeholder="Username" type="text" required>
+      <input placeholder="Password" type="password" required>
+      <input placeholder="Confirm Password" type="password" required>
+      <div class="row">
+        <div class="col-md-6">
+            <button type="submit">Submit</button>
+        </div>
+      </div>
+    
+     
+    </form>
 </div>
