--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -1,21 +1,61 @@
-    <app-header-navbar [classNames] ="'navbar navbar-inverse sticky-navigation'"> </app-header-navbar>
-    <div style="margin-top:5%">
-        <form>
-          <h3>Login</h3>
-          <input placeholder="Username" type="text" required>
-          <input placeholder="Password" type="password" required>
-          <div class="row">
+<app-header-navbar [classNames] ="'navbar sticky-navigation'"> </app-header-navbar>
+   
+<div class="ui container login-container">
 
-            <div class="col-md-6">
-                <button type="submit">Submit</button>
+  <div class="login-block">
+    <div class="login-main-block" @dialog>
+      <!-- Start Login Form -->
+      <div class="main-logo">
+        <img src="assets/img/logo_white.png"/>
+      </div>
+      <div class="ui form login-form">
+        <!--Login Form Start-->
+        <div class="login-section">
+          <form [formGroup]="loginForm" (submit)="onLogin(loginForm.value,loginForm.valid)">
+            <div class="two fields">
+              <div class="field logo">
+                <h3>Login </h3>
+              </div>
             </div>
 
-            <div class="col-md-6">
-                <a [routerLink]="['/register']">New User? Register Here</a>
+            <div class="two fields margin-top-10">
+              <div class="field">
+                <input type="text" placeholder="email" Autofocus  class="form-control" formControlName="email" required/>
+                <div class="input-validation-msg">
+                  <validation *ngIf="isRequiredField(loginForm.get('email'))" [errMsg]="'Email is Required'"></validation>
+                  <validation *ngIf="isValidField(loginForm.get('email'))" [errMsg]="'Enter Valid Email'"></validation>
+                </div>
+              </div>
             </div>
 
-          </div>
-        
-         
-        </form>
+            <div class="two fields margin-top-10">
+              <div class="field">
+                <input type="password" placeholder="password" class="form-control" formControlName="password" required/>
+                <div class="input-validation-msg">
+                  <validation *ngIf="isRequiredField(loginForm.get('password'))" [errMsg]="'Password is Required'"></validation>
+                </div>
+              </div>
+            </div>
+
+            <div class="two fields margin-top-10">
+              <div class="field">
+                <button type="submit" class="btn-primary btn btn-block"   [disabled]="!loginForm.valid">
+                  Login
+                </button>
+              </div>
+              <div class="text-center whiteClr margin-top-10">
+                <span>New User ? <a (click)="viewRegisterForm()"  >Register</a></span>
+              </div>
+
+              <div class="margin-top-10 whiteClr text-center">
+                <span>Forgot Password <a> Recover</a></span>
+              </div>
+            </div>
+          </form>
+        </div>
+        <!-- End Login Form -->
+      </div>
     </div>
+  </div>
+</div>
+
