--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -81,7 +81,7 @@ a:focus {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
   padding: 0!important;
-  background: #3f51b5 !important;
+  background: #009688 !important;
 }
 .sticky-navigation .row {
   padding: 0;
@@ -638,3 +638,60 @@ a:focus {
 .social .fa-linkedin:hover {
   background: #007BB6;
 }
+
+/****************Form*********************************************************/
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: #fff;
+  background-color: #2a303a;
+  background-image: none;
+  background-clip: padding-box;
+  border: 2px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0rem;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
+
+.form-control.ng-invalid.ng-touched {
+  border-color: red; }
+
+.form-control::-ms-expand {
+  background-color: transparent;
+  border: 0; }
+
+.form-control:focus {
+  color: #fff;
+  background-color: #2a303a;
+  border-color: #00c8aa;
+  outline: none; }
+
+.form-control::-webkit-input-placeholder {
+  color: #fff;
+  opacity: 1; }
+
+.form-control:-ms-input-placeholder {
+  color: #fff;
+  opacity: 1; }
+
+.form-control::placeholder {
+  color: #868e96;
+  opacity: 1; }
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: #2a303a;
+  opacity: 1; }
+
+select.form-control:not([size]):not([multiple]) {
+  height: calc(2.25rem + 2px); }
+
+select.form-control:focus::-ms-value {
+  color: #495057;
+  background-color: #fff; }
+
+.form-control-file,
+.form-control-range {
+  display: block; }
+
+/*************************************************************************/
