--- a/src/assets/css/material.css
+++ b/src/assets/css/material.css
@@ -5813,7 +5813,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: rgba(0, 0, 0, 0.84);
 }
 .navbar-inverse.navbar {
-  background-color: #3f51b5;
+  background-color: #323232;
   color: rgba(255, 255, 255, 0.84);
 }
 .navbar-inverse.navbar .navbar-form .form-control-wrapper input.form-control::-webkit-input-placeholder,
