--- a/src/app/user-auth/navigation/navigation.component.html
+++ b/src/app/user-auth/navigation/navigation.component.html
@@ -3,11 +3,12 @@
     <a class="nv-brand logo-right" href="javascript:void(0)"><i class="mdi-image-timelapse"></i>Pluto</a>
   </div> -->
   <ul style="padding-top: 60px;">
-        <li><a [routerLink]="['/']">Home</a></li>
-        <li><a [routerLink]="['/Testimonial']">Testimonial</a></li>
-        <li><a [routerLink]="['/Screenshots']">Screenshots</a></li>
-        <li><a [routerLink]="['/contact']">contact us</a></li>
-        <li><a [routerLink]="['/login']">Login</a></li>
+        <li><a [routerLink]="['/']" routerLinkActive="active">Home</a></li>
+        <li><a [routerLink]="['/token-for-buyers']" routerLinkActive="active">Token For Buyers</a></li>
+        <li><a [routerLink]="['/for-prospective-ico']" routerLinkActive="active">For Prospective ICO</a></li>
+        <li><a [routerLink]="['/about-us']" routerLinkActive="active">About Us</a></li>
+        <li><a [routerLink]="['/faq']" routerLinkActive="active">FAQ</a></li>
+        <li><a [routerLink]="['/login']" routerLinkActive="active">Login / Create Account</a></li>
   </ul>
  <button class="close-button"(click)="closeBtnClicked()">Close Menu</button>
 </div>
