--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app">
     <div class="content-wrap">
+        <progress-hud></progress-hud>
         <app-header></app-header>
         <router-outlet></router-outlet>
     </div>
