landing page new updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app">
     <div class="content-wrap">
         <progress-hud></progress-hud>
-        <app-header></app-header>
+        <app-header [headerClass] ="headerClass" [headerText]="headerText"></app-header>
         <router-outlet></router-outlet>
     </div>
 </div>
