--- a/src/app/user-auth/our-work/our-work.component.html
+++ b/src/app/user-auth/our-work/our-work.component.html
@@ -1,3 +1,42 @@
+<section id="main-features" class="section main-feature-gray">
+  <div class="container">
+
+    <div class="row">   
+      <div class="col-md-8 col-sm-8 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="feature-item">
+          <h1 class="title-small">
+            <b> Our Work!</b>
+          </h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's 
+            standard dummy text, when an unknown printer took a galley of type and scrambled it to 
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronicstandard 
+            dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to 
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+          </p>
+        </div>
+      </div>
+      
+      <div class="col-md-4 col-sm-4 wow fadeInRight" style="margin-top:5%;" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <img src="../../../assets/img/our-work.png" class="img-responsive" alt="">
+      </div>  
+
+    </div>
+
+  </div>
+</section>
+
+<section id="cta">
+  <div class="container">
+    <div class="row text-center">         
+        <h3 class="title-small wow bounce" data-wow-duration="1000ms" data-wow-delay="300ms">Join Us Today and Change Yourself</h3>
+      </div>
+  </div>
+</section>
+
 <section id="screenshot" class="section" style ="padding:0px;">
   <div class="row" style="margin:0; padding:0;">
     <div class="col-md-3 col-sm-6 col-xs-12" style="margin:0; padding:0;">
@@ -146,3 +185,71 @@
     </div>
   </div>
 </section>
+<section id="clients" class="section">
+  <div class="container">
+    
+    <div class="section-header text-center">
+      <h1 class="section-title wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">Featured on</h1>
+      <h2 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">Material UI Bootstrap APP and Business Template</h2>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img1.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="500ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img2.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img3.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="900ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img4.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img1.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="500ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img2.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img3.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="900ms">
+        <div class="client-item-wrapper">
+          <img src="../../../assets/img/clients/img4.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="copyright">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <p class="copyright-text">
+         © Pluto 2015 All right reserved. Designed and Developed by 
+          <a href="http://graygrids.com/">
+            GrayGrids
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  </section>
