--- a/src/app/user-auth/about-us/about-us.component.html
+++ b/src/app/user-auth/about-us/about-us.component.html
@@ -1,3 +1,84 @@
-<p>
-  about-us works!
-</p>
+<section id="main-features" class="section main-feature-gray">
+  <div class="container">
+
+    <div class="row">   
+      <div class="col-md-8 col-sm-8 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="feature-item">
+          <h1 class="title-small">
+            <b> Our Story!</b>
+          </h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's 
+            standard dummy text, when an unknown printer took a galley of type and scrambled it to 
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronicstandard 
+            dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to 
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+          </p>
+        </div>
+      </div>
+      
+      <div class="col-md-4 col-sm-4 wow fadeInRight" style="margin-top:5%;" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <img src="../../../assets/img/story.png" class="img-responsive" alt="">
+      </div>  
+
+    </div>
+
+  </div>
+</section>
+
+<section id="cta">
+  <div class="container">
+    <div class="row text-center">         
+        <h3 class="title-small wow bounce" data-wow-duration="1000ms" data-wow-delay="300ms">Join Us Today and Change Yourself</h3>
+      </div>
+  </div>
+</section>
+
+<section id="main-features" class="section main-feature-gray">
+  <div class="container">
+
+    <div class="row">   
+      <div class="col-md-8 col-sm-8 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="feature-item">
+          <h1 class="title-small">
+            <b> Our Culture!</b>
+          </h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's 
+            standard dummy text, when an unknown printer took a galley of type and scrambled it to 
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronicstandard 
+            dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to 
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+          </p>
+        </div>
+      </div>
+      
+      <div class="col-md-4 col-sm-4 wow fadeInRight" style="margin-top:5%;" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <img src="../../../assets/img/our-culture.png" class="img-responsive" alt="">
+      </div>  
+
+    </div>
+
+  </div>
+</section>
+
+<section id="copyright">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <p class="copyright-text">
+         © Pluto 2015 All right reserved. Designed and Developed by 
+          <a href="http://graygrids.com/">
+            GrayGrids
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>   
