services page added

--- a/src/app/user-auth/navigation/navigation.component.html
+++ b/src/app/user-auth/navigation/navigation.component.html
@@ -4,7 +4,7 @@
   </div> -->
   <ul style="padding-top: 60px;">
         <li><a [routerLink]="['/home']" routerLinkActive="active-tab">Home</a></li>
-        <!-- <li><a [routerLink]="['/services']" routerLinkActive="active">Services</a></li> -->
+        <li><a [routerLink]="['/services']" routerLinkActive="active-tab">Services</a></li>
        
         <li><a [routerLink]="['/about-us']" routerLinkActive="active-tab">About Us</a></li>
         <li><a [routerLink]="['/our-work']" routerLinkActive="active-tab">Our Work</a></li>
