--- a/src/app/user-auth/services/services.component.html
+++ b/src/app/user-auth/services/services.component.html
@@ -1,3 +1,113 @@
-<p>
-  services works!
-</p>
+<section id="features" class="section">
+  <div class="container">
+    <div class="section-header">
+      <h1 class="section-title wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="100ms"><b>Our Services</b></h1>
+      <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Who seeks after it and wants to have it</h2>
+    </div>
+    <div class="row">
+
+      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <div class="features">
+          <div class="icon">
+            <i class="mdi-action-settings"></i>
+          </div>
+          <div class="features-text">
+            <h4>Built-with Bootstrap 3.5.x</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </div>
+         </div>
+      </div>
+
+
+      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
+        <div class="features">
+          <div class="icon">
+            <i class="mdi-action-done-all"></i>
+          </div>
+          <div class="features-text">
+            <h4>Material Design</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="550ms">
+        <div class="features">
+          <div class="icon">
+            <i class="mdi-image-blur-linear"></i>
+          </div>
+          <div class="features-text">
+            <h4>Clean and Refreshing</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </div>
+        </div>
+      </div>            
+
+
+      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="650ms">
+        <div class="features">
+          <div class="icon">
+            <i class="mdi-communication-business"></i>
+          </div>
+          <div class="features-text">
+            <h4>Ready for Business or App</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="750ms">
+        <div class="features">
+          <div class="icon">
+            <i class="mdi-action-favorite"></i>
+          </div>
+          <div class="features-text">
+            <h4>Crafted with Love</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="850ms">
+        <div class="features">
+          <div class="icon">
+            <i class="mdi-hardware-phonelink"></i>
+          </div>
+          <div class="features-text">
+            <h4>Fully Responsive Layout</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </div>
+        </div>
+      </div>   
+    </div>
+  </div>
+</section>
+
+
+<section id="copyright">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <p class="copyright-text">
+         © Pluto 2015 All right reserved. Designed and Developed by 
+          <a href="http://graygrids.com/">
+            GrayGrids
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  </section>
