--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -41,10 +41,10 @@ a:focus {
   padding: 90px 0;
 }
 .section-header .section-title {
-  font-size: 30px;
+  font-size: 50px;
   text-transform: uppercase;
   margin-top: 0px;
-  font-family: monospace;
+  font-family: RobotoDraft,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
   color: black;
 }
 .section-header .section-subtitle {
@@ -52,6 +52,7 @@ a:focus {
   font-weight: 400;
   text-transform: uppercase;
   margin-top: 0;
+  font-family: RobotoDraft,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 .title-small {
   font-size: 50px;
@@ -413,6 +414,7 @@ a:focus {
 }
 #other-features {
   padding-bottom: 35px;
+  padding-top: 90px;
 }
 #other-features .features-content {
   padding: 30px 0;
