updated services page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
         <progress-hud></progress-hud>
         <app-header [headerClass] ="headerClass" [headerText]="headerText"></app-header>
         <router-outlet></router-outlet>
+        <app-copyrights></app-copyrights>
     </div>
 </div>
