--- a/src/app/user-auth/services/services.component.html
+++ b/src/app/user-auth/services/services.component.html
@@ -1,113 +1,123 @@
-<section id="features" class="section">
-  <div class="container">
-    <div class="section-header">
-      <h1 class="section-title wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="100ms"><b>Our Services</b></h1>
-      <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Who seeks after it and wants to have it</h2>
-    </div>
-    <div class="row">
+<div class="tabs">
 
-      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-        <div class="features">
-          <div class="icon">
-            <i class="mdi-action-settings"></i>
-          </div>
-          <div class="features-text">
-            <h4>Built-with Bootstrap 3.5.x</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </div>
-         </div>
-      </div>
+  <input type="radio" id="tab1" name="tab-control" checked>
+  <input type="radio" id="tab2" name="tab-control">
+  <input type="radio" id="tab3" name="tab-control">
+  <input type="radio" id="tab4" name="tab-control">
+  <ul>
+    <li title="Technology">
+      <label for="tab1" role="button">
+          <img src="../../../assets/img/technology.svg">
+        <br>
+        <span>Technology</span>
+      </label>
+    </li>
+    <li title="Legal Review">
+      <label for="tab2" role="button">
+          <img src="../../../assets/img/legal.svg">
+        <br>
+        <span>Legal Review</span>
+      </label>
+    </li>
+    <li title="Bussiness">
+      <label for="tab3" role="button">
+        <svg viewBox="0 0 24 24">
+          <path d="M3,4A2,2 0 0,0 1,6V17H3A3,3 0 0,0 6,20A3,3 0 0,0 9,17H15A3,3 0 0,0 18,20A3,3 0 0,0 21,17H23V12L20,8H17V4M10,6L14,10L10,14V11H4V9H10M17,9.5H19.5L21.47,12H17M6,15.5A1.5,1.5 0 0,1 7.5,17A1.5,1.5 0 0,1 6,18.5A1.5,1.5 0 0,1 4.5,17A1.5,1.5 0 0,1 6,15.5M18,15.5A1.5,1.5 0 0,1 19.5,17A1.5,1.5 0 0,1 18,18.5A1.5,1.5 0 0,1 16.5,17A1.5,1.5 0 0,1 18,15.5Z"
+          />
+        </svg>
+        <br>
+        <span>Bussiness</span>
+      </label>
+    </li>
+    <li title="Marketing">
+      <label for="tab4" role="button">
+          <img src="../../../assets/img/marketing.svg">
+        <br>
+        <span>Marketing</span>
+      </label>
+    </li>
+  </ul>
 
-
-      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
-        <div class="features">
-          <div class="icon">
-            <i class="mdi-action-done-all"></i>
-          </div>
-          <div class="features-text">
-            <h4>Material Design</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="550ms">
-        <div class="features">
-          <div class="icon">
-            <i class="mdi-image-blur-linear"></i>
-          </div>
-          <div class="features-text">
-            <h4>Clean and Refreshing</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </div>
-        </div>
-      </div>            
-
-
-      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="650ms">
-        <div class="features">
-          <div class="icon">
-            <i class="mdi-communication-business"></i>
-          </div>
-          <div class="features-text">
-            <h4>Ready for Business or App</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="750ms">
-        <div class="features">
-          <div class="icon">
-            <i class="mdi-action-favorite"></i>
-          </div>
-          <div class="features-text">
-            <h4>Crafted with Love</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="850ms">
-        <div class="features">
-          <div class="icon">
-            <i class="mdi-hardware-phonelink"></i>
-          </div>
-          <div class="features-text">
-            <h4>Fully Responsive Layout</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </div>
-        </div>
-      </div>   
-    </div>
+  <div class="slider">
+    <div class="indicator"></div>
   </div>
-</section>
-
-
-<section id="copyright">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="copyright-text">
-         © Pluto 2015 All right reserved. Designed and Developed by 
-          <a href="http://graygrids.com/">
-            GrayGrids
-          </a>
-        </p>
+  <div class="content">
+    <section id="features" class="section" style="padding:0px 0px">
+      <div class="container">
+        <div class="row">
+          <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+            <div class="features">
+              <div class="icon">
+                <i class="mdi-action-settings"></i>
+              </div>
+              <div class="features-text" >
+                <h4>{{item.heading}}</h4>
+                <p>
+                  {{item.subHeading}}
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+    <section id="features" class="section" style="padding:0px 0px">
+        <div class="container">
+          <div class="row">
+            <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="features">
+                <div class="icon">
+                  <i class="mdi-action-settings"></i>
+                </div>
+                <div class="features-text" >
+                  <h4>{{item.heading}}</h4>
+                  <p>
+                    {{item.subHeading}}
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="features" class="section" style="padding:0px 0px">
+          <div class="container">
+            <div class="row">
+              <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+                <div class="features">
+                  <div class="icon">
+                    <i class="mdi-action-settings"></i>
+                  </div>
+                  <div class="features-text" >
+                    <h4>{{item.heading}}</h4>
+                    <p>
+                      {{item.subHeading}}
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="features" class="section" style="padding:0px 0px">
+            <div class="container">
+              <div class="row">
+                <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+                  <div class="features">
+                    <div class="icon">
+                      <i class="mdi-action-settings"></i>
+                    </div>
+                    <div class="features-text" >
+                      <h4>{{item.heading}}</h4>
+                      <p>
+                        {{item.subHeading}}
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+   
   </div>
-  </section>
+</div>
