updated services page

--- a/src/app/user-auth/services/services.component.html
+++ b/src/app/user-auth/services/services.component.html
@@ -42,7 +42,7 @@
     <div class="indicator"></div>
   </div>
   <div class="content">
-    <section id="features" class="section" style="padding:0px 0px">
+    <section id="features" class="section" style="padding:0px 0px;background:#9a7ebd">
       <div class="container">
         <div class="row">
           <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -61,7 +61,7 @@
         </div>
       </div>
     </section>
-    <section id="features" class="section" style="padding:0px 0px">
+    <section id="features" class="section"  style="padding:0px 0px;background:#f6c755">
         <div class="container">
           <div class="row">
             <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </section>
-      <section id="features" class="section" style="padding:0px 0px">
+      <section id="features" class="section" style="padding:0px 0px;background:#05cc9b">
           <div class="container">
             <div class="row">
               <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -99,7 +99,7 @@
             </div>
           </div>
         </section>
-        <section id="features" class="section" style="padding:0px 0px">
+        <section id="features" class="section" style="padding:0px 0px;background:#00adef">
             <div class="container">
               <div class="row">
                 <div *ngFor="let item of servicesData.technology" class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
