--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -276,13 +276,13 @@ a:focus {
   line-height: 80px;
   border-radius: 50%;
   font-size: 36px;
-  color: #3f51b5;
+  color: #fff;
 }
 #features .features h4 {
   margin-bottom: 10px;
   font-size: 20px;
   font-weight: 700;
-  color: #3f51b5;
+  color: #fff;
 }
 #features .features .features-text {
   padding-left: 80px;
